--- a/Desafios_de_ JS/Desafios/desafios_aulas_js/ex017/index.css
+++ b/Desafios_de_ JS/Desafios/desafios_aulas_js/ex017/index.css
@@ -1,7 +1,8 @@
-@charset 'UTF-8';
+@charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Passion+One:wght@400;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sriracha&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Passion+One:wght@400;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sriracha&display=swap');
-body{    background-color: rgb(32, 123, 209);
+body{    
+    background-color: black;
     margin: 0;
 }
 header{
@@ -34,11 +35,11 @@ footer{
     margin-top: 20px;
 }
 button{
-    padding: 7px;
+    padding: 10px;
     border: none;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.397);
+    box-shadow: 3px 2px 5px rgba(0, 0, 0, 0.397);
     border-radius: 3px;
-    background: rgba(40, 114, 226, 0.747);
+    background: red;
     color: white;
     cursor: pointer;
     width: 100px;
@@ -46,7 +47,7 @@ button{
     font-family:'Kanit', Helvetica, sans-serif;
 }
 button:hover{
-    background-color: rgb(12, 178, 178);
+    background-color: rgba(255, 0, 0, 0.75);
     width: 130px;
     transform: scale(1.1);
 }
